--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .update_title{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+.overview_title{
+    font-family: 'Signifier (woff2)', 'uni-serif', 'Times New Roman', Times, serif;
+
+}
